# Wallet

./: .gitignore  CMakeLists.txt  CMakePresets.json  Wallet.pro  main.cpp
assets/styles/: arrowButton.qss  card.qss  cardForm.qss  mainFrame.qss  mainWindow.qss  properties.json  roundButton.qss
data/: save.json
src/containers/: vettore.h
src/gui/: contentFrame.cpp  contentFrame.h  mainFrame.cpp  mainFrame.h
src/gui/forms/: cardForm.cpp  cardForm.h
src/gui/visitors/: cardsVisitor.cpp  cardsVisitor.h  formsVisitor.cpp  formsVisitor.h
src/gui/widgets/: arrowButton.cpp  arrowButton.h  coloredIcon.cpp  coloredIcon.h
src/models/: anonymousCard.cpp  anonymousCard.h  cardInterface.h  cardsVisitorInterface.h  personalizedCard.cpp  personalizedCard.h  wallet.cpp  wallet.h
src/models/anonymous/: giftCard.cpp  giftCard.h
src/models/personalized/: fidelityCard.cpp  fidelityCard.h  paymentCard.cpp  paymentCard.h
src/utilities/: cardFactory.h  observer.h  parser.cpp  parser.h  utils.h
